[package]
name = "cam_cap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.2", features = ["derive"] }
eframe = { version = "0.22.0", features = ["wgpu"] }
egui = "0.22.0"
env_logger = "0.10.0"
image = "0.24.6"
log = "0.4.18"
nokhwa = { version = "0.10.4", features = ["wgpu", "input-native"] }
tokio = { version = "1.28.2", features = ["rt", "macros", "io-std", "io-util", "sync", "time"] }
rfd = "0.11.4"
#opencv = { version = "0.82.1", default-features = false, features = ["video", "videoio"] }
